# BTC-Ticker

./: README.md
PIO-T-Display-s3-pro/: platformio.ini
PIO-T-Display-s3-pro/lib/LV_Helper/: lv_conf.h
PIO-T-Display-s3-pro/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
PIO-T-Display-s3-pro/lib/ui/src/components/: ui_comp_hook.c
PIO-T-Display-s3-pro/lib/ui/src/fonts/: ui_font_Font100.c  ui_font_Font25.c  ui_font_Font35.c  ui_font_Font38.c
PIO-T-Display-s3-pro/lib/ui/src/images/: ui_img_1015890679.c  ui_img_1166207886.c  ui_img_1283391855.c  ui_img_213572400.c  ui_img_287808550.c  ui_img_537082870.c  ui_img_611106281.c  ui_img_images_bg_png.c  ui_img_images_btc_png.c  ui_img_images_logo_png.c
PIO-T-Display-s3-pro/lib/ui/src/screens/: ui_chart.c  ui_crypto.c  ui_loading.c  ui_wifiProv.c
PIO-T-Display-s3-pro/src/: BianceCandleStick.cpp  BianceCandleStick.h  BinanceWebSocket.cpp  BinanceWebSocket.h  Config.h  TimeHelper.cpp  TimeHelper.h  WiFiProvHelper.cpp  WiFiProvHelper.h  WiFiProvScreen.cpp  WiFiProvScreen.h  main.cpp
SLS-T-Display-s3-pro/: BTC-Ticker.sll  BTC-Ticker.spj  BTC-Ticker_events.py
SLS-T-Display-s3-pro/assets/Fonts/: ui_font_Font100.fcfg  ui_font_Font25.fcfg  ui_font_Font38.c  ui_font_Font38.fcfg
